tests/semantica/valid/while/test2.ctds
program 
    {
		bool foo(){
			return true;
		}

		void main(){
			while(foo()) {
				return;
			}
		}
    }