tests/semantica/invalid/while/test2.ctds
program
	{
		void main(){
			while(2 + true){
				
			}
		}
	}